# trino-odbc

./: .gitignore  CONTRIBUTING.md  LICENSE.rtf  NOTICE  README.md  VS-C++-Settings-Export.vssettings  build_linux_debug32_deb.sh  build_linux_debug32_rpm.sh  build_linux_debug64_deb.sh  build_linux_debug64_rpm.sh  build_linux_release32_deb.sh  build_linux_release32_rpm.sh  build_linux_release64_deb.sh  build_linux_release64_rpm.sh  build_mac_debug64.sh  build_mac_release64.sh  build_performance_linux64.sh  build_performance_win64.ps1  build_win_debug32.ps1  build_win_debug64.ps1  build_win_release32.ps1  build_win_release64.ps1  build_win_relwithdebinfo32.ps1  build_win_relwithdebinfo64.ps1  run_cppcheck.ps1  run_cppcheck.sh  run_test_runner.bat  run_test_runner.sh  timestream.cfg
performance/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  NOTICE  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  performance_tests.sln
performance/PTODBCExecution/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  performance_execution.sln  performance_execution.vcxproj  performance_execution.vcxproj.filters  performance_odbc_execution.cpp
performance/PTODBCResults/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  performance_odbc_results.cpp  performance_results.sln  performance_results.vcxproj  performance_results.vcxproj.filters
performance/PerformanceHelper/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  performance_helper.cpp  performance_helper.h  performance_helper.sln  performance_helper.vcxproj  performance_helper.vcxproj.filters
performance/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  googletest-download.sln  googletest.vcxproj  googletest.vcxproj.filters
performance/googletest/googletest-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  googletest-distribution.sln
performance/googletest/googletest-build/googlemock/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gmock.sln  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters
performance/googletest/googletest-build/googletest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  gtest.sln  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters
performance/googletest/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake  googletest-mkdirs.cmake
performance/gtest/: googletest-download.cmake  googletest.cmake
src/: CMakeLists.txt  CMakeSettings.json.in  linux_32bit_toolchain.cmake
src/PowerBIConnector/: AmazonTimestreamAADConnector.ps1  AmazonTimestreamConnector.mez  AmazonTimestreamConnector.ps1
src/PowerBIConnector/AmazonTimestreamAADConnector/: AmazonTimestreamAADConnector.mproj  AmazonTimestreamAADConnector.pq  AmazonTimestreamAADConnector.query.pq  Diagnostics.pqm  OdbcConstants.pqm  resources.resx
src/PowerBIConnector/AmazonTimestreamConnector/: AmazonTimestreamConnector.mproj  AmazonTimestreamConnector.pq  AmazonTimestreamConnector.query.pq  resources.resx
src/modules/: code-coverage.cmake
src/odbc/: CMakeLists.txt  module.def  version.rc.in
src/odbc/include/timestream/: odbc.h
src/odbc/include/trino/: odbc.h
src/odbc/install/: install_amd64.cmd  install_x86.cmd  timestream-odbc-bundle.wxs.in.x64  timestream-odbc-bundle.wxs.in.x86  timestream-odbc-install.ini  timestream-odbc.wxs.in
src/odbc/install/mac/: README.txt  Welcome.txt  postinstall
src/odbc/src/: common_types.cpp  connection.cpp  descriptor.cpp  dsn_config.cpp  entry_points.cpp  environment.cpp  ignite_error.cpp  interval_day_second.cpp  interval_year_month.cpp  log.cpp  log_level.cpp  odbc.cpp  statement.cpp  time.cpp  timestamp.cpp  timestream_column.cpp  timestream_cursor.cpp  type_traits.cpp  utility.cpp  utils.cpp
src/odbc/src/app/: application_data_buffer.cpp
src/odbc/src/authentication/: aad.cpp  auth_type.cpp  okta.cpp  saml.cpp
src/odbc/src/config/: configuration.cpp  connection_info.cpp  connection_string_parser.cpp
src/odbc/src/diagnostic/: diagnosable_adapter.cpp  diagnostic_record.cpp  diagnostic_record_storage.cpp
src/odbc/src/meta/: column_meta.cpp  table_meta.cpp
src/odbc/src/query/: column_metadata_query.cpp  column_privileges_query.cpp  data_query.cpp  foreign_keys_query.cpp  primary_keys_query.cpp  procedure_columns_query.cpp  procedures_query.cpp  special_columns_query.cpp  statistics_query.cpp  table_metadata_query.cpp  table_privileges_query.cpp  type_info_query.cpp
src/tests/: CMakeLists.txt
src/tests/data-writer/: CMakeLists.txt  timestream_data_generator.cpp  timestream_writer.cpp  timestream_writer.h
src/tests/data-writer/metadata-creator/: computer_table_creater.h  measure_metadata_creater.h
src/tests/input/: create_credentials_file.ps1  create_credentials_file.sh
src/tests/integration-test/: CMakeLists.txt
src/tests/integration-test/include/: odbc_test_suite.h  sql_test_suite_fixture.h  test_utils.h
src/tests/integration-test/src/: api_robustness_test.cpp  application_data_buffer_test.cpp  attributes_test.cpp  connection_info_test.cpp  connection_test.cpp  descriptors_test.cpp  meta_queries_test.cpp  odbc_execution_test.cpp  odbc_test_suite.cpp  queries_test.cpp  sql_get_info_test.cpp  test_utils.cpp
src/tests/unit-test/: CMakeLists.txt
src/tests/unit-test/include/: odbc_unit_test_suite.h
src/tests/unit-test/src/: column_meta_test.cpp  configuration_test.cpp  log_test.cpp  odbc_unit_test_suite.cpp  (+4 more)
(+189 files in other folders)
